# workshop-04

./: .gitignore  README.md  pyproject.toml
.cursor/: _mcp.json  mcp.json
.cursor/commands/: browse.md  database.md  implement-and-plot.md
.cursor/rules/: plotting-guidelines.mdc  python-development.mdc
exercises/exercise_0/: exercise_0.md
exercises/exercise_1/: exercise_1.md
exercises/exercise_2/: exercise_2.md
exercises/exercise_3/: exercise_3.md
exercises/exercise_4/: exercise_4.md
mlb/: db.py  exercise_0.py  exercise_2_top_performers_heatmap.py  exercise_3_home_run_distribution.py  exercise_4_team_correlation_heatmap.py
